src/test/ui/feature-gates/feature-gate-if_while_or_patterns.rs
fn main() {
    if let 0 | 1 = 0 { //~ ERROR multiple patterns in `if let` and `while let` are unstable
        ;
    }
    while let 0 | 1 = 1 { //~ ERROR multiple patterns in `if let` and `while let` are unstable
        break;
    }
}
